--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,10 +7,6 @@
   </div>
 </div>
 
-<div class="section-container">
-  <div><%@lists.each do | list |%></div>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-      <p><%=link_to list.name, list_path(list)%></p>
-    </div>
-  <div><%end%></div>
-</div>
+<p><%@lists.each do | list |%></p>
+    <p><%=link_to list.name, list_path(list)%></p>
+<p><%end%></p>
